[package]
name = "molek-syntez-solitaire-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
enigo = "0.1.3"
rand = "0.8.5"
screenshots = "0.8.10"
strum = "0.26.2"
strum_macros = "0.26.2"
