[package]
name = "molek-syntez-solitaire-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
rand = {version = "0.8.5", features = ["small_rng"]}
screenshots = "0.8.10"
strum = "0.26.2"
strum_macros = "0.26.2"
